Scripts: use `jbender-apache-fiber` instead of `jbender-okhttp-fiber` in warmup and 10k100ms bench (faster, no OOM threads with slow backends)