@@ -14,8 +14,6 @@ export PORT=8000
 Script snippet for runs (comment/uncomment and repeat):
 
 ``` bash
-export JVMARGS="-Dco.paralleluniverse.fibers.detectRunawayFibers=false -Dco.paralleluniverse.fibers.servlet.FiberHttpServlet.disableSyncExceptions=true -Dco.paralleluniverse.fibers.servlet.FiberHttpServlet.disableSyncForward=true -Dco.paralleluniverse.fibers.servlet.FiberHttpServlet.disableJettyAsyncFixes=true -Dco.paralleluniverse.fibers.servlet.FiberHttpServlet.disableTomcatAsyncFixes=true -server -XX:+AggressiveOpts -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -Xms4G -Xmx4G"
-
 export SERVER_TECH=jetty-handler-async-dispatch
 # export SERVER_TECH=jetty-handler-async-queue
 
@@ -73,7 +71,7 @@ java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar ${SERVER_TECH}/bui
 tail -f ${SERVER_TECH}.${BENCH_NAME}.slog # CTRL-C
 
 # LOADGEN: rate1k1000ms warmup
-export CLIENT_TECH=jbender-okhttp-fiber
+export CLIENT_TECH=jbender-apache-fiber
 java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar $CLIENT_TECH/build/libs/${CLIENT_TECH}-fatcap.jar -u http://${SERVER}:${PORT}/hello -z http://${SERVER}:9000/monitor -smsy -c 100000 -n 1000 -w 0 -cmpi 250 -ss false
 # rate1k1000ms
 export CLIENT_TECH=jbender-apache-fiber
@@ -89,10 +87,10 @@ java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar ${SERVER_TECH}/bui
 tail -f ${SERVER_TECH}.${BENCH_NAME}.slog # CTRL-C
 
 # LOADGEN: rate10k100ms warmup
-export CLIENT_TECH=jbender-okhttp-fiber
+export CLIENT_TECH=jbender-apache-fiber
 java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar $CLIENT_TECH/build/libs/${CLIENT_TECH}-fatcap.jar -u http://${SERVER}:${PORT}/hello -z http://${SERVER}:9000/monitor -smsy -c 100000 -n 1000 -w 0 -cmpi 250 -ss false
 # rate10k100ms
-export CLIENT_TECH=jbender-okhttp-fiber
+export CLIENT_TECH=jbender-apache-fiber
 java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar $CLIENT_TECH/build/libs/${CLIENT_TECH}-fatcap.jar -u http://${SERVER}:${PORT}/hello -z http://${SERVER}:9000/monitor -smsy -c 100000 -r 10000 -cmpi 250 -w 0 -j 10 >> ${SERVER_TECH}.rate10k100ms.clog 2>&1 &
 tail -f ${SERVER_TECH}.rate10k100ms.clog # CTRL-C
 
@@ -105,7 +103,7 @@ java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar ${SERVER_TECH}/bui
 tail -f ${SERVER_TECH}.${BENCH_NAME}.slog # CTRL-C
 
 # LOADGEN: rate100k0ms warmup
-export CLIENT_TECH=jbender-okhttp-fiber
+export CLIENT_TECH=jbender-apache-fiber
 java -Dcapsule.jvm.args=${JVMARGS} -Dcapsule.log=verbose -jar $CLIENT_TECH/build/libs/${CLIENT_TECH}-fatcap.jar -u http://${SERVER}:${PORT}/hello -z http://${SERVER}:9000/monitor -smsy -c 100000 -n 1000 -w 0 -cmpi 250 -ss false
 # rate100k0ms
 export CLIENT_TECH=jbender-okhttp-fiber
